# cooldown

./: .bumpversion.toml  .gitignore  .goreleaser.yaml  .typos.toml  AGENTS.md  Cargo.toml  README.md  TODO.md  clippy.toml  cooldown.toml  mise.toml  taskfile.yaml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: build.yaml  lint.yaml  pages.yaml  release.yaml  test.yaml
crates/cooldown/: Cargo.toml
crates/cooldown-adapter-util/: Cargo.toml
crates/cooldown-adapter-util/src/: driver.rs  lib.rs
crates/cooldown-cargo/: Cargo.toml
crates/cooldown-cargo/src/: cargocmd.rs  ecosystem.rs  index.rs  lib.rs  manifest.rs  native.rs  tool.rs  version.rs
crates/cooldown-conda/: Cargo.toml
crates/cooldown-conda/src/: lib.rs  lock.rs  registry.rs  tool.rs
crates/cooldown-core/: Cargo.toml
crates/cooldown-core/src/: config.rs  duration.rs  error.rs  evaluate.rs  fs.rs  lib.rs  model.rs  policy.rs  ports.rs
crates/cooldown-core/src/config/: document.rs  exclude.rs  layers.rs  scan.rs  schema.rs
crates/cooldown-core/src/policy/: model.rs  resolve.rs
crates/cooldown-core/tests/: check_pin.rs  evaluate.rs  explain.rs  resolve.rs
crates/cooldown-core/tests/common/: mod.rs
crates/cooldown-go/: Cargo.toml
crates/cooldown-go/src/: ecosystem.rs  gocmd.rs  lib.rs  mutation.rs  proxy.rs  semver.rs  tool.rs
crates/cooldown-go/src/tool/: apply.rs  graph.rs  releases.rs  tests.rs
crates/cooldown-hex/: Cargo.toml
crates/cooldown-hex/src/: lib.rs  lock.rs  registry.rs  tool.rs  version.rs
crates/cooldown-maven/: Cargo.toml
crates/cooldown-maven/src/: lib.rs  lock.rs  registry.rs  tool.rs  version.rs
crates/cooldown-npm/: Cargo.toml
crates/cooldown-npm/src/: deno.rs  jsr.rs  lib.rs  lock.rs  manifest.rs  nodecmd.rs  registry.rs  tool.rs  version.rs
crates/cooldown-pip/: Cargo.toml
crates/cooldown-pip/src/: lib.rs  lock.rs  tool.rs
crates/cooldown-registry/: Cargo.toml
crates/cooldown-registry/src/: cache.rs  fake.rs  http.rs  lib.rs
crates/cooldown-render/: Cargo.toml
crates/cooldown-render/src/: lib.rs  model.rs  schema.rs  tty.rs
crates/cooldown-rubygems/: Cargo.toml
crates/cooldown-rubygems/src/: lib.rs  lock.rs  registry.rs  tool.rs  version.rs
crates/cooldown-scan/: Cargo.toml
crates/cooldown-scan/src/: lib.rs
crates/cooldown-swift/: Cargo.toml
crates/cooldown-swift/src/: lib.rs  lock.rs  registry.rs  tool.rs  version.rs
crates/cooldown-toml-util/: Cargo.toml
crates/cooldown-toml-util/src/: lib.rs
crates/cooldown-uv/: Cargo.toml
crates/cooldown-uv/src/: artifact.rs  build_requires.rs  ecosystem.rs  lib.rs  lock.rs  manifest.rs  native.rs  pypi.rs  tool.rs  uvcmd.rs  version.rs
crates/cooldown/src/: cli.rs  discovery.rs  lib.rs  main.rs  scan.rs
crates/cooldown/src/app/: baseline.rs  change_key.rs  check.rs  clock.rs  explain.rs  lock.rs  mod.rs  model.rs  outdated.rs  progress.rs  project_copy.rs  read.rs  release_cache.rs  resilient_apply.rs  sync.rs  upgrade.rs  workspace.rs
crates/cooldown/src/app/upgrade/: executor.rs  mod.rs
crates/cooldown/src/cli/: args.rs  commands.rs  output.rs  present.rs  runtime.rs  setup.rs  workspace_free.rs
crates/cooldown/src/cli/commands/: baseline.rs  common.rs  mod.rs  report.rs
crates/cooldown/src/cli/present/: check.rs  common.rs  config.rs  explain.rs  mod.rs  no_tool.rs  outdated.rs  sync.rs  upgrade.rs
crates/cooldown/src/cli/setup/: detect.rs  options.rs  policy.rs
crates/cooldown/tests/: conformance.rs  convergence_cargo.rs  convergence_deno.rs  convergence_go.rs  convergence_npm.rs  convergence_pip.rs  convergence_pnpm.rs  convergence_pnpm_multiline.rs  convergence_uv.rs
crates/cooldown/tests/support/: mod.rs
docs/: go.mod  hugo.toml
docs/assets/: _custom.scss  _syntax.scss
docs/assets/terminals/: check.html  config.html  explain.html  outdated.html  upgrade.html
docs/content/: _index.md
docs/content/docs/: _index.md  faq.md  installation.md  introduction.md  quick-start.md  security.md
docs/content/docs/ci/: _index.md  github-actions.md
docs/content/docs/commands/: _index.md  check.md  cli-reference.md  fix.md  other.md  outdated.md  upgrade.md
docs/content/docs/configuration/: _index.md  basics.md  excludes.md  precedence.md  selectors.md
docs/content/docs/tools/: _index.md
docs/layouts/_partials/docs/inject/: head.html  menu-before.html
docs/layouts/shortcodes/: terminal.html
examples/polyglot/: README.md
examples/polyglot/bun/: index.js
examples/polyglot/cargo/: Cargo.toml  cooldown.toml
examples/polyglot/cargo/src/: lib.rs
examples/polyglot/conda/: conda-lock.yml
examples/polyglot/deno/: deno.json  main.ts
examples/polyglot/elixir/: mix.exs
examples/polyglot/go/: go.mod  go.sum  main.go
examples/polyglot/gradle/: build.gradle  gradle.lockfile
examples/polyglot/maven/: pom.xml
examples/polyglot/npm/: package-lock.json  package.json
examples/polyglot/pip/: requirements.txt
examples/polyglot/pnpm/: pnpm-lock.yaml
examples/polyglot/poetry/: pyproject.toml
examples/polyglot/python/: pyproject.toml
examples/polyglot/ruby/: Gemfile
examples/polyglot/swift/: Package.resolved  Package.swift
plan/: cooldown-cli.md
scripts/: screenshots.sh  terminals.sh
