[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/romnn/cooldown"
homepage = "https://github.com/romnn/cooldown"
authors = ["romnn <roman@airtype.de>"]
keywords = ["supply-chain", "security", "dependencies", "cooldown", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal crates
cooldown-core = { path = "crates/cooldown-core", version = "0.1.0" }
cooldown-registry = { path = "crates/cooldown-registry", version = "0.1.0" }
cooldown-render = { path = "crates/cooldown-render", version = "0.1.0" }
cooldown-go = { path = "crates/cooldown-go", version = "0.1.0" }
cooldown-cargo = { path = "crates/cooldown-cargo", version = "0.1.0" }
cooldown-uv = { path = "crates/cooldown-uv", version = "0.1.0" }

# External
jiff = { version = "0.2", features = ["serde"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
thiserror = "2"
color-eyre = "0.6"
camino = { version = "1", features = ["serde1"] }
globset = "0.4"
regex = "1"
semver = "1"
pep440_rs = "0.7"
futures = "0.3"
comfy-table = "7"

# Dev
insta = { version = "1", features = ["json", "redactions"] }
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = "thin"
strip = true
