[workspace]
resolver = "2"
members = ["crates/*"]
# Standalone example projects used only to generate README screenshots; not part of the build.
exclude = ["examples"]

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/romnn/cooldown"
homepage = "https://github.com/romnn/cooldown"
authors = ["romnn <roman@airtype.de>"]
keywords = ["supply-chain", "security", "dependencies", "cooldown", "cli"]
categories = ["command-line-utilities", "development-tools"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[workspace.lints.rust]
warnings = { level = "warn", priority = -1 }
unsafe_code = "deny"
unused_must_use = "deny"
# Warn-only: keep iteration fast during development; CI/review still adds the docs.
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
unimplemented = "deny"
todo = "deny"
indexing_slicing = "deny"
# Every `#[allow(...)]` must carry a `reason = "..."` justifying the escape hatch.
allow_attributes_without_reason = "deny"

struct_excessive_bools = "allow"

[workspace.dependencies]
# Internal crates
cooldown-core = { path = "crates/cooldown-core" }
cooldown-toml-util = { path = "crates/cooldown-toml-util" }
cooldown-registry = { path = "crates/cooldown-registry" }
cooldown-render = { path = "crates/cooldown-render" }
cooldown-adapter-util = { path = "crates/cooldown-adapter-util" }
cooldown-go = { path = "crates/cooldown-go" }
cooldown-cargo = { path = "crates/cooldown-cargo" }
cooldown-uv = { path = "crates/cooldown-uv" }
cooldown-npm = { path = "crates/cooldown-npm" }
cooldown-rubygems = { path = "crates/cooldown-rubygems" }
cooldown-hex = { path = "crates/cooldown-hex" }
cooldown-maven = { path = "crates/cooldown-maven" }
cooldown-pip = { path = "crates/cooldown-pip" }
cooldown-conda = { path = "crates/cooldown-conda" }
cooldown-swift = { path = "crates/cooldown-swift" }

# External
jiff = { version = "0.2", features = ["serde"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "sync", "time"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "gzip", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
toml_edit = "0.25.12"
async-trait = "0.1"
thiserror = "2"
color-eyre = "0.6"
camino = { version = "1", features = ["serde1"] }
globset = "0.4"
ignore = "0.4"
regex = "1"
semver = "1"
pep440_rs = "0.7"
futures = "0.3"
comfy-table = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
indoc = "2"

# Dev
tempfile = "3"
