[package]
name = "cooldown-cargo"
description = "Rust/Cargo ecosystem adapter for cooldown: Cargo.lock + crates.io publish times, with cargo-driven resolution/apply."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
cooldown-core.workspace = true
cooldown-registry.workspace = true
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
async-trait.workspace = true
camino.workspace = true
futures.workspace = true
semver.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
