[package]
name = "cooldown-cargo"
description = "Rust/Cargo tool adapter for cooldown: Cargo.lock + crates.io publish times, with cargo-driven resolution/apply."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cooldown-core.workspace = true
cooldown-adapter-util.workspace = true
cooldown-toml-util.workspace = true
cooldown-registry.workspace = true
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
tokio.workspace = true
async-trait.workspace = true
camino.workspace = true
semver.workspace = true
tracing.workspace = true

[dev-dependencies]
indoc.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
