[package]
name = "cooldown-conda"
description = "conda and pixi tool adapters for cooldown: conda-lock.yml / pixi.lock backed by anaconda.org (conda) and PyPI publish times."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cooldown-core.workspace = true
cooldown-adapter-util.workspace = true
cooldown-registry.workspace = true
cooldown-uv.workspace = true
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
camino.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
