[package]
name = "cooldown-go"
description = "Go ecosystem adapter for cooldown: GOPROXY publish-time reads, x/mod semver/pseudo-version semantics, and go-driven resolution/apply."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
cooldown-core.workspace = true
cooldown-registry.workspace = true
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
camino.workspace = true
futures.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
