[package]
name = "cooldown-hex"
description = "Elixir/Hex tool adapter for cooldown: mix.lock + hex.pm publish times (inserted_at)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cooldown-core.workspace = true
cooldown-adapter-util.workspace = true
cooldown-registry.workspace = true
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
camino.workspace = true
semver.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
