[package]
name = "cooldown-pip"
description = "pip and Poetry tool adapters for cooldown: requirements.txt / poetry.lock backed by PyPI publish times (PEP 700), reusing the shared PyPI client and PEP 440 version model."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cooldown-core.workspace = true
cooldown-adapter-util.workspace = true
cooldown-registry.workspace = true
cooldown-uv.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
async-trait.workspace = true
camino.workspace = true

[dev-dependencies]
indoc.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
