[package]
name = "cooldown-registry"
description = "Shared HTTP client, on-disk metadata cache (with a monotonic publish-time floor), and per-host concurrency for cooldown registry adapters."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
cooldown-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
camino.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
