[package]
name = "cooldown-render"
description = "Presentation for the cooldown CLI: the stable JSON envelope and colorful TTY tables."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cooldown-core.workspace = true
serde.workspace = true
serde_json.workspace = true
jiff.workspace = true
comfy-table.workspace = true
