[package]
name = "cooldown-swift"
description = "Swift Package Manager tool adapter for cooldown: Package.resolved backed by GitHub Releases publish times."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cooldown-core.workspace = true
cooldown-adapter-util.workspace = true
cooldown-registry.workspace = true
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
camino.workspace = true
semver.workspace = true

[dev-dependencies]
indoc.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
