[package]
name = "cooldown-uv"
description = "Python/uv ecosystem adapter for cooldown: uv.lock + PyPI (PEP 700) publish times, with uv-driven resolution/apply."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cooldown-core.workspace = true
cooldown-toml-util.workspace = true
cooldown-registry.workspace = true
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
async-trait.workspace = true
camino.workspace = true
futures.workspace = true
pep440_rs.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
