[package]
name = "cooldown"
description = "A unified, language-agnostic dependency-cooldown CLI: refuse to adopt any version younger than a minimum release age, across tools, from one policy core."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "cooldown"

[lints]
workspace = true

[lib]
name = "cooldown"
path = "src/lib.rs"

[[bin]]
name = "cooldown"
path = "src/main.rs"

[dependencies]
cooldown-core.workspace = true
cooldown-toml-util.workspace = true
cooldown-registry.workspace = true
cooldown-render.workspace = true
cooldown-go.workspace = true
cooldown-cargo.workspace = true
cooldown-uv.workspace = true
cooldown-npm.workspace = true
cooldown-rubygems.workspace = true
cooldown-hex.workspace = true
cooldown-maven.workspace = true
cooldown-pip.workspace = true
cooldown-conda.workspace = true
cooldown-swift.workspace = true
async-trait.workspace = true
clap.workspace = true
tokio.workspace = true
color-eyre.workspace = true
camino.workspace = true
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
futures.workspace = true
globset.workspace = true
ignore.workspace = true
indoc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true

[dev-dependencies]
cooldown-core.workspace = true
cooldown-render.workspace = true
async-trait.workspace = true
jiff.workspace = true
camino.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
