# A tiny, standalone Cargo project used only to generate cooldown's README screenshots.
# Dependencies are deliberately pinned to older versions in Cargo.lock so `cooldown outdated`
# always has something to show. `[workspace]` keeps it out of the parent cooldown workspace.
[package]
name = "cooldown-example-cargo"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
serde = "1.0.150"
tokio = "1.25.0"
clap = "4.1.0"
regex = "1.7.0"
anyhow = "1.0.68"
bytes = "1.3.0"
log = "0.4.17"
once_cell = "1.16.0"
itertools = "0.10.5"
bincode = "2.0.1"
