[tool.poetry]
name = "demo"
version = "0.1.0"
description = "cooldown poetry example"
authors = ["demo <demo@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28"
click = "^8.0"
rich = "^12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
