# Example uv project for cooldown screenshots; dependencies pinned to old versions on purpose so
# cooldown always has updates to show, and uv.lock stays in sync (so `check` won't flag it stale).
[project]
name = "cooldown-example-python"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "requests==2.28.0",
    "click==8.0.0",
    "rich==12.0.0",
    "flask==2.2.0",
    "pydantic==1.10.0",
]
